      -------------------------------------------------------------

This file should be used to summarize modifications introduced in the 
code and to keep track of all tags.

     ---------------------------------------------------------------
     * Please list in reverse chronological order (last date on top)
     ---------------------------------------------------------------

28-Nov-2014 V. Uzhinsky   (had-hadronization-V10-00-13)
 - G4LundStringFragmentation - charged baryon number conservation is fixed
   for K-nucleus interactions 

6-Nov-2014 V. Uzhinsky    (had-hadronization-V10-00-12)
 - Warning message is erased.

5-Nov-2014 V. Uzhinsky    (had-hadronization-V10-00-11)
 - Redoing tag had-hadronization-V10-00-10 because it was done in src directory
   instead of top directory - hadronization.

3-Nov-2014 V. Uzhinsky    (had-hadronization-V10-00-10)
- G4ExcitedStringDecay.cc Restoration of the initial string system is addded 
  for a correct repeatition of calculations in the case when hadronization is fault.

- G4LundStringFragmentation.cc Fragmentation functions for qq -> B are set as 
  f(z)~ Const for all baryons.

20-Oct-2014 A.Ribon        (had-hadronization-V10-00-09) 
- G4VLongitudinalStringDecay.cc : mixing between the vector mesons
  rho0 and omega have been changed from 50% (rho0) - 50% (omega) to
  100% (rho0) - 0% (omega), in order to reduce the pi0 production. 
  Expected little effects in thin-target, and significant effects
  in hadronic showers in calorimeters.

15-Oct-2014 V.Uzhinsky     (had-hadronization-V10-00-08)
- Essential improvement of QGS hadronization.
  Fragmentation functions of quarks and di-quarks are closed to Kaidalov's
  and Shabelskii's ones. G4QGSMFragmentation::GetLightConeZ was almost
  re-written. Ionk algorithm is inserted for sampling light-cone momentum
  fraction, z. Parameters of the fragmentation were tuned. They will be
  improved after a revision of the QGSM string creation algorithm.